--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
 }
 
 #question {
-  margin-top: 10vh;
+  margin-top: 8vh;
   margin-bottom: 20px;
   font-size: large;
   color: wheat;
@@ -28,8 +28,18 @@ body {
 
 #questionImg {
   width: 50vh;
-  opacity: 0.7;
+  opacity: 0.6;
   animation: fadein 2s ease-in;
+  box-shadow: 0 0 10px #d8d8d8;
+  transition: 0.5s ease all;
+}
+
+.questionImg {
+  filter: grayscale(100%);
+}
+
+.correctImg {
+  filter: grayscale(0%);
 }
 
 @keyframes fadein {
@@ -52,6 +62,7 @@ body {
   color: white;
   font-size: large;
   border-radius: 10px;
+  box-shadow: 0 0 5px gray;
 }
 
 #answers {
@@ -74,18 +85,26 @@ body {
   border-radius: 10px;
   font-size: large;
   transition: 0.5s ease all;
+  box-shadow: 0 0 10px #d8d8d8;
 }
 
-.chosenAnswer {
-  background-color: orange;
+.answer:hover {
+  background: whitesmoke !important;
+  color: black;
+  transform: scale(1.1);
+}
+
+.chosenAnswer,
+.chosenAnswer:hover {
+  background: orange !important;
 }
 
 .correctAnswer {
-  background-color: lightgreen;
+  background-color: lightgreen !important;
 }
 
 .wrongAnswer {
-  background-color: coral;
+  background: coral !important;
 }
 
 #score {
@@ -112,7 +131,18 @@ body {
   color: blanchedalmond;
   cursor: pointer;
   display: none;
-  margin-top: 100px;
+  background: darkred;
+  width: fit-content;
+  margin: 10vh auto;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+#questionsLeft {
+  font-size: xx-large;
+  color: blanchedalmond;
+  cursor: pointer;
+  margin-top: 40px;
 }
 
 #mute,
